import { Schema, model } from "mongoose";

const groupBookingMemberSchema = new Schema(
  {
    fullName: { type: String, required: true },
    idNumber: { type: String, required: false },
    dateOfBirth: { type: Date, required: false },
    phoneNumber: { type: String, required: false },
    email: { type: String, required: false },
    isLeader: { type: Boolean, default: false },
    roomNumber: { type: String, required: false },
  },
  { _id: false }
);

const groupBookingSchema = new Schema(
  {
    requesterId: { type: Schema.Types.ObjectId, ref: "User", required: false },
    requesterName: { type: String, required: true },
    requesterPhone: { type: String, required: true },
    requesterEmail: { type: String, required: true },

    checkIn: { type: Date, required: true },
    checkOut: { type: Date, required: true },

    peopleCount: { type: Number, required: true, min: 1 },
    roomCount: { type: Number, required: true, min: 1 },

    notes: { type: String, required: false },

    status: {
      type: String,
      enum: [
        "pending_approval",
        "approved",
        "info_uploaded",
        "quoted",
        "awaiting_payment",
        "deposit_paid",
        "paid",
        "confirmed",
        "refund_requested",
        "refunded",
        "cancelled",
        "rejected",
      ],
      default: "pending_approval",
    },

    allocatedRoomIds: [{ type: Schema.Types.ObjectId, ref: "Room" }],

    members: { type: [groupBookingMemberSchema], default: [] },

    quoteAmount: { type: Number, required: false, min: 0 },
    paymentLink: { type: String, required: false },
    paidAmount: { type: Number, required: false, min: 0, default: 0 },
    remainingAmount: { type: Number, required: false, min: 0, default: 0 },
    refundRequestedAt: { type: Date, required: false },
    refundProcessedAt: { type: Date, required: false },
    refundAmount: { type: Number, required: false, min: 0 },
    rejectedAt: { type: Date, required: false },
  },
  { timestamps: true, versionKey: false }
);

export default model("GroupBooking", groupBookingSchema);


