// ============================================
// THIẾT KẾ CƠ SỞ DỮ LIỆU - HỆ THỐNG MIKO HOTEL
// MongoDB Document Model
// ============================================
// Import vào https://dbdiagram.io để vẽ và export PNG/PDF cho Word

Project MikoHotelDatabase {
  database_type: 'MongoDB'
  Note: '''
    Thiết kế CSDL cho hệ thống quản lý khách sạn Miko Hotel
    
    Sử dụng MongoDB Document Model:
    - 15 Collections (tương tự Tables)
    - Embedded Documents (nhúng)
    - References qua ObjectId (tương tự Foreign Keys)
    
    Có thể export PNG/PDF để chèn vào Word
  '''
}

// ============================================
// QUẢN LÝ NGƯỜI DÙNG
// ============================================

Table users {
  _id ObjectId [pk]
  fullName String
  email String [unique]
  password String
  phoneNumber String
  dateOfBirth Date
  role String [note: 'customer/staff/admin']
  status String [note: 'active/blocked']
  preferences Array [note: 'Array of strings']
  emailVerified Boolean
  emailVerificationToken String
  emailVerificationTokenExpires Date
  passwordResetOTP String
  passwordResetOTPExpires Date
  deletedAt Date [note: 'Soft delete']
  createdAt DateTime
  updatedAt DateTime
}

// ============================================
// QUẢN LÝ ĐỊA ĐIỂM
// ============================================

Table locations {
  _id ObjectId [pk]
  name String
  address String
  city String
  province String
  description String
  images Array [note: 'Array of URLs']
  coordinates Object [note: 'Embedded: {lat, lng}']
  amenities Array [note: 'Array of strings']
  createdAt DateTime
  updatedAt DateTime
}

// ============================================
// QUẢN LÝ PHÒNG
// ============================================

Table roomtypes {
  _id ObjectId [pk]
  name String
  description String
  pricePerNight Number
  extraHourPrice Number
  maxExtendHours Number
  capacity Number
  amenities Array [note: 'Array of strings']
  images Array [note: 'Array of URLs']
  createdAt DateTime
  updatedAt DateTime
}

Table rooms {
  _id ObjectId [pk]
  roomNumber String [unique]
  typeId ObjectId [ref: > roomtypes._id]
  status String [note: 'available/booked/maintenance/checked_in/occupied/unavailable']
  amenities Array [note: 'Array of strings']
  images Array [note: 'Array of URLs']
  createdAt DateTime
  updatedAt DateTime
}

// ============================================
// QUẢN LÝ ĐẶT PHÒNG
// ============================================

Table bookings {
  _id ObjectId [pk]
  customerId ObjectId [ref: > users._id]
  guests Array [note: 'Embedded Array: [{fullName, idNumber, dateOfBirth, phoneNumber, email}]']
  guestCount Number
  roomId ObjectId [ref: > rooms._id]
  checkIn Date
  checkOut Date
  services Array [note: 'Embedded Array: [{serviceId, name, price, quantity}]']
  source String [note: 'online/walk_in']
  totalPrice Number
  discount Number
  finalPrice Number
  status String [note: 'pending/confirmed/checked_in/checked_out/cancelled']
  createdAt DateTime
  updatedAt DateTime
}

Table groupbookings {
  _id ObjectId [pk]
  requesterId ObjectId [ref: > users._id]
  requesterName String
  requesterPhone String
  requesterEmail String
  checkIn Date
  checkOut Date
  peopleCount Number
  roomCount Number
  notes String
  status String [note: 'pending_approval/approved/info_uploaded/quoted/awaiting_payment/deposit_paid/paid/confirmed/refund_requested/refunded/cancelled/rejected']
  allocatedRoomIds Array [ref: > rooms._id, note: 'Array of Room ObjectIds']
  members Array [note: 'Embedded Array: [{fullName, idNumber, dateOfBirth, phoneNumber, email, isLeader, roomNumber}]']
  quoteAmount Number
  paymentLink String
  paidAmount Number
  remainingAmount Number
  refundRequestedAt Date
  refundProcessedAt Date
  refundAmount Number
  rejectedAt Date
  createdAt DateTime
  updatedAt DateTime
}

// ============================================
// QUẢN LÝ DỊCH VỤ
// ============================================

Table services {
  _id ObjectId [pk]
  name String
  description String
  price Number
  category String
  duration Number
  isAvailable Boolean
  images Array [note: 'Array of URLs']
  createdAt DateTime
  updatedAt DateTime
}

Table servicebookings {
  _id ObjectId [pk]
  bookingId ObjectId [ref: > bookings._id]
  serviceId ObjectId [ref: > services._id]
  customerId ObjectId [ref: > users._id]
  quantity Number
  totalPrice Number
  bookingDate Date
  status String
  createdAt DateTime
  updatedAt DateTime
}

// ============================================
// QUẢN LÝ THANH TOÁN
// ============================================

Table invoices {
  _id ObjectId [pk]
  bookingId ObjectId [ref: - bookings._id, note: 'Optional']
  groupBookingId ObjectId [ref: - groupbookings._id, note: 'Optional']
  customerId ObjectId [ref: > users._id]
  totalAmount Number
  paidAmount Number
  remainingAmount Number
  paymentStatus String [note: 'pending/partial_paid/paid/failed/refunded/refund_requested/cancelled']
  status String [note: 'pending/paid/failed/refunded']
  issuedAt Date
  createdAt DateTime
  updatedAt DateTime
}

Table payments {
  _id ObjectId [pk]
  bookingId ObjectId [ref: - bookings._id, note: 'Optional']
  groupBookingId ObjectId [ref: - groupbookings._id, note: 'Optional']
  customerId ObjectId [ref: > users._id]
  paymentMethod String [note: 'stripe/cash/bank_transfer/other']
  amount Number
  currency String [note: 'VND']
  status String [note: 'pending/completed/failed/cancelled/refunded']
  stripeSessionId String
  stripePaymentIntentId String
  stripeCustomerId String
  transactionId String
  bankInfo Object [note: 'Embedded: {bankName, accountNumber, accountHolder, transferDate, transferNote}']
  cashInfo Object [note: 'Embedded: {receivedBy, receivedAt, receiptNumber, notes}']
  refundInfo Object [note: 'Embedded: {refundAmount, refundedAt, refundMethod, refundReason, processedBy}']
  metadata Object [note: 'Embedded: {key: value pairs}']
  notes String
  expiresAt Date
  paidAt Date
  createdAt DateTime
  updatedAt DateTime
}

// ============================================
// QUẢN LÝ ĐÁNH GIÁ
// ============================================

Table bookingstatuses {
  _id ObjectId [pk]
  bookingId ObjectId [ref: > bookings._id]
  status String
  notes String
  changedBy ObjectId [ref: > users._id]
  createdAt DateTime
  updatedAt DateTime
}

Table reviews {
  _id ObjectId [pk]
  bookingId ObjectId [ref: - bookings._id, note: '1-1 relationship']
  customerId ObjectId [ref: > users._id]
  roomId ObjectId [ref: > rooms._id]
  rating Number [note: '1-5']
  comment String
  images Array [note: 'Array of URLs']
  status String [note: 'pending/approved/rejected']
  createdAt DateTime
  updatedAt DateTime
}

// ============================================
// QUẢN LÝ CHAT
// ============================================

Table conversations {
  _id ObjectId [pk]
  participants Array [note: 'Embedded Array: [{userId, role, lastReadAt}]']
  lastMessage ObjectId [ref: - messages._id, note: '1-1 relationship']
  lastMessageAt DateTime
  status String [note: 'active/archived/deleted']
  unreadCount Map [note: 'Embedded Map: {userId: count}']
  createdAt DateTime
  updatedAt DateTime
}

Table messages {
  _id ObjectId [pk]
  conversationId ObjectId [ref: > conversations._id]
  senderId ObjectId [ref: > users._id]
  content String
  type String [note: 'text/image/file']
  attachments Array [note: 'Embedded Array: [{filename, url, size, mimeType, uploadedAt}]']
  readBy Array [note: 'Array of User ObjectIds']
  deliveredAt DateTime
  readAt DateTime
  createdAt DateTime
  updatedAt DateTime
}

// ============================================
// QUẢN LÝ THÔNG BÁO
// ============================================

Table notifications {
  _id ObjectId [pk]
  userId ObjectId [ref: > users._id]
  type String
  title String
  message String
  relatedId ObjectId [note: 'Polymorphic reference']
  relatedType String [note: 'booking/payment/review/etc']
  isRead Boolean
  readAt DateTime
  metadata Object [note: 'Embedded: {key: value pairs}']
  createdAt DateTime
  updatedAt DateTime
}

// ============================================
// GHI CHÚ VỀ QUAN HỆ
// ============================================
//
// QUAN HỆ 1-N (Một-Nhiều):
// - users (1) -> (N) bookings
// - users (1) -> (N) groupbookings
// - users (1) -> (N) payments
// - users (1) -> (N) invoices
// - users (1) -> (N) reviews
// - users (1) -> (N) notifications
// - users (1) -> (N) messages
// - roomtypes (1) -> (N) rooms
// - rooms (1) -> (N) bookings
// - rooms (1) -> (N) reviews
// - bookings (1) -> (N) servicebookings
// - bookings (1) -> (N) invoices
// - bookings (1) -> (N) payments
// - bookings (1) -> (N) bookingstatuses
// - services (1) -> (N) servicebookings
// - conversations (1) -> (N) messages
//
// QUAN HỆ 1-1 (Một-Một):
// - bookings (1) -> (1) reviews
// - conversations (1) -> (1) messages (lastMessage)
//
// QUAN HỆ N-N (Nhiều-Nhiều):
// - users (N) <-> (N) conversations (qua participants array)
// - rooms (N) <-> (N) groupbookings (qua allocatedRoomIds array)
//
// QUAN HỆ TÙY CHỌN:
// - invoices: bookingId HOẶC groupBookingId (không cả hai)
// - payments: bookingId HOẶC groupBookingId (không cả hai)
//
// EMBEDDED DOCUMENTS:
// - bookings.guests[]: Array of Guest objects
// - bookings.services[]: Array of Service objects
// - groupbookings.members[]: Array of Member objects
// - payments.bankInfo{}: Bank information object
// - payments.cashInfo{}: Cash information object
// - payments.refundInfo{}: Refund information object
// - payments.metadata{}: Metadata object
// - conversations.participants[]: Array of Participant objects
// - conversations.unreadCount{}: Map object
// - messages.attachments[]: Array of Attachment objects
// - locations.coordinates{}: Coordinates object
// - notifications.metadata{}: Metadata object
//
// ============================================
// HƯỚNG DẪN EXPORT CHO WORD
// ============================================
// 1. Truy cập: https://dbdiagram.io/d
// 2. Import file này hoặc paste nội dung
// 3. Click nút "Export" (góc trên bên phải)
// 4. Chọn format:
//    - PNG: Để chèn hình ảnh vào Word
//    - PDF: Để chèn PDF vào Word hoặc in
//    - SQL: Để export schema (nếu cần)
// 5. Download và chèn vào Word
//
// Lưu ý:
// - PNG: Chất lượng cao, phù hợp cho Word
// - PDF: Vector, có thể zoom không bị mờ
// - Có thể chỉnh sửa layout trên dbdiagram.io trước khi export

